Fix collapsed translate

--- a/view/main/index.css
+++ b/view/main/index.css
@@ -21,7 +21,7 @@
     transition: transform 150ms;
 
     &.is-collapsed {
-      transform: translateY(242px);
+      transform: translateY(287px);
     }
 
     @supports (backdrop-filter: blur(24px)) {
